@@ -15,57 +15,42 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class CommentService {
+
+
     private final CommentRepository commentRepository;
+
+
     private final PostRepository postRepository;
+
+
     private final UserRepository userRepository;
 
-    @Transactional
-    public CommentDto createComment(CommentDto commentDto){
-        Post post = postRepository.findById(commentDto.getPostId())
-                .orElseThrow(() -> new IllegalArgumentException("Post not found with id: " + commentDto.getPostId()));
-        User user = userRepository.findById(commentDto.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("User not found with id: " + commentDto.getUserId()));
+    public CommentDto createComment(Long userId, Long postId, CommentDto commentDto) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new RuntimeException("Post not found"));
 
         Comment comment = new Comment();
         comment.setContent(commentDto.getContent());
-        comment.setPost(post);
         comment.setUser(user);
+        comment.setPost(post);
 
-        Comment savedComment  = commentRepository.save(comment);
-        return mapToDto(savedComment);
+        Comment savedComment = commentRepository.save(comment);
+        return CommentDto.fromEntity(savedComment);
     }
 
-    @Transactional(readOnly = true)
-    public List<CommentDto> getCommentsByPostId(Long postId){
+    public List<CommentDto> getCommentsByPostId(Long postId) {
         List<Comment> comments = commentRepository.findByPostId(postId);
-        return comments.stream().map(this::mapToDto).collect(Collectors.toList());
+        return comments.stream()
+                .map(CommentDto::fromEntity)
+                .toList();
     }
 
-    @Transactional
-    public CommentDto updateComment(Long commentId, CommentDto commentDto){
-        Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new IllegalArgumentException("Comment not found with id: " + commentId));
-
-        comment.setContent(commentDto.getContent());
-        Comment updatedComment = commentRepository.save(comment);
-        return mapToDto(updatedComment);
-    }
-
-    public void deleteComment(Long commentId){
-        if (!commentRepository.existsById(commentId)) {
-            throw new IllegalArgumentException("Comment not found with id: " + commentId);
-        }
+    public void deleteComment(Long commentId) {
         commentRepository.deleteById(commentId);
-    }
-
-    private CommentDto mapToDto(Comment comment) {
-        return CommentDto.builder()
-                .id(comment.getId())
-                .content(comment.getContent())
-                .userId(comment.getUser().getId())
-                .postId(comment.getPost().getId())
-                .build();
     }
 }
